Fixed issue with logo going off screen on mobile

--- a/stylesheets/index-responsive.css
+++ b/stylesheets/index-responsive.css
@@ -228,13 +228,6 @@
   .pad30 {
     padding: 40px 15px;
   }
-  .LG-logo {
-    position: relative;
-    top: 5px;
-    left: 15px;
-    margin: 0;
-    width: auto !important;
-  }
   #block6-right {
     padding-left: 0;
   }
