--- a/stylesheets/nav.css
+++ b/stylesheets/nav.css
@@ -87,8 +87,9 @@
 .LG-logo {
   max-width: 90%;
   position: absolute;
+  top: 5px;
   left: 50%;
-  margin-left: -123px !important;
+  margin-left: -123px;
   display: block;
 }
 
@@ -99,7 +100,10 @@
 }
 @media(max-width: 767px){
   .LG-logo {
-    margin-left: 0 !important;
+    position: relative;
+    left: 0;
+    margin: 0 auto;
+    width: auto !important;
   }
 }
 
@@ -111,4 +115,11 @@
     display: block;
     visibility: visible ;
   }
+}
+
+@media (max-width: 400px) {
+    .LG-logo {
+        width: 200px !important;
+        top: 9px;
+    }
 }
